Fixed long cart on mobile

--- a/theme/assets/css/cart.scss
+++ b/theme/assets/css/cart.scss
@@ -8,7 +8,7 @@
   box-shadow: 2px 2px 1px 0 rgba(0,0,0,0.2);
   border: 1px solid #f3f3f3;
   border-width: 1px 0 0 1px;
-  transition: right 300ms ease-out;
+  transition: right 200ms ease-in-out;
   padding: 20px;
   text-align: left;
   font-size: 90%;
@@ -52,11 +52,12 @@ Mobile
 */
 @media screen and (max-width: 768px) {
   .mini-cart {
-    width: 100%;
-  }
-
-  .mini-cart-items {
+    top: 3.25rem;
+    position: fixed;
+    width: 90%;
+    z-index: 1002;
+    bottom: 0;
     overflow-y: scroll;
-    max-height: 350px;
+    font-size: 82%;
   }
 }
